; ModuleID = '/home/carl/AnghaBench/zfs/lib/libspl/os/linux/extr_getmntany.c_getextmntent_impl.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libspl/os/linux/extr_getmntany.c_getextmntent_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.extmnttab = type { i32, i32, i32 }
%struct.stat64 = type { i32 }
%struct.mnttab = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.extmnttab*, i32)* @getextmntent_impl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getextmntent_impl(i32* %0, %struct.extmnttab* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.extmnttab*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.stat64, align 4
  store i32* %0, i32** %5, align 8
  store %struct.extmnttab* %1, %struct.extmnttab** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load %struct.extmnttab*, %struct.extmnttab** %6, align 8
  %12 = bitcast %struct.extmnttab* %11 to %struct.mnttab*
  %13 = call i32 @_sol_getmntent(i32* %10, %struct.mnttab* %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %39

16:                                               ; preds = %3
  %17 = load %struct.extmnttab*, %struct.extmnttab** %6, align 8
  %18 = getelementptr inbounds %struct.extmnttab, %struct.extmnttab* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @stat64(i32 %19, %struct.stat64* %9)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %16
  %23 = load %struct.extmnttab*, %struct.extmnttab** %6, align 8
  %24 = getelementptr inbounds %struct.extmnttab, %struct.extmnttab* %23, i32 0, i32 1
  store i32 0, i32* %24, align 4
  %25 = load %struct.extmnttab*, %struct.extmnttab** %6, align 8
  %26 = getelementptr inbounds %struct.extmnttab, %struct.extmnttab* %25, i32 0, i32 0
  store i32 0, i32* %26, align 4
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %4, align 4
  br label %41

28:                                               ; preds = %16
  %29 = getelementptr inbounds %struct.stat64, %struct.stat64* %9, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @major(i32 %30)
  %32 = load %struct.extmnttab*, %struct.extmnttab** %6, align 8
  %33 = getelementptr inbounds %struct.extmnttab, %struct.extmnttab* %32, i32 0, i32 1
  store i32 %31, i32* %33, align 4
  %34 = getelementptr inbounds %struct.stat64, %struct.stat64* %9, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @minor(i32 %35)
  %37 = load %struct.extmnttab*, %struct.extmnttab** %6, align 8
  %38 = getelementptr inbounds %struct.extmnttab, %struct.extmnttab* %37, i32 0, i32 0
  store i32 %36, i32* %38, align 4
  br label %39

39:                                               ; preds = %28, %3
  %40 = load i32, i32* %8, align 4
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %39, %22
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @_sol_getmntent(i32*, %struct.mnttab*) #1

declare dso_local i64 @stat64(i32, %struct.stat64*) #1

declare dso_local i32 @major(i32) #1

declare dso_local i32 @minor(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
